fix blurry images for submission thumbnails
* crop off pixels at resize
* don't let auto render a fractional image size

--- a/static/scss/main/submission_list.scss
+++ b/static/scss/main/submission_list.scss
@@ -130,7 +130,7 @@
 
         .submission_uploads {
             img {
-                max-width: 100%;
+                width: 100%;
                 height: auto;
                 margin: 0 auto;
                 display: block;
